Fixed spacing issues

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -181,11 +181,15 @@
 
   .wrapper {
     --wrapper-max-width: 1200px;
-    --wrapper-padding: 1rem;
+    --wrapper-padding: var(--space-xs);
 
     max-width: var(--wrapper-max-width);
     margin-inline: auto;
     padding-inline: var(--wrapper-padding);
+
+    @media (width > 440px) {
+      --wrapper-padding: var(--space-sm);
+    }
 
     /* helps to match the Figma file */
     box-sizing: content-box;
@@ -214,16 +218,15 @@
   }
   .section {
     background-color: var(--background-primary);
-    border-radius: var(--radius-4xl);
+    border-radius: var(--border-radius-3);
 
-    gap: calc(var(--spacing) * 6);
-    padding-inline: calc(var(--spacing) * 4);
-    padding-bottom: calc(var(--spacing) * 8);
-    margin-top: calc(var(--spacing) * 6);
-    padding-top: calc(var(--spacing) * 20);
+    gap: var(--space-m);
+    padding-inline: var(--space-m);
+    padding-bottom: var(--space-l);
+    padding-top: var(--space-l);
 
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 8);
+    @media (width > 440px) {
+      padding-inline: var(--space-xl);
     }
   }
 }
